--- a/Memoir_project.Rmd
+++ b/Memoir_project.Rmd
@@ -30,8 +30,8 @@ journalinfo: "Publication reference"
 archive: "DOI: xxx/xx"
 # Date format: '%Y %B %d' for distill
 date: "`r format(Sys.time(), '%Y %B %d')`"
-url: https://GitHubID.github.io/Repository/
-github-repo: GitHubID/Repository
+url: https://EamonOCathain.github.io/memoir_project3/
+github-repo: EamonOCathain/memoir_project3
 # Language
 lang: en-US
 otherlangs: [fr-FR,it]
